--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Lliwio</title>
+        <script src="js/particles.min.js"></script>
     </head>
     <body>
+        <canvas id="app"></canvas>
+
+        <script src="js/init.js"></script>
     </body>
 </html>
