added basic elements/styling

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Lliwio</title>
+
+        <link rel="stylesheet" type="text/css" href="css/index.css"/>
         <script src="js/particles.min.js"></script>
     </head>
     <body>
-        <canvas id="app"></canvas>
+
+        <textarea id="AppInputArea"></textarea>
+        <canvas id="AppCanvas"></canvas>
 
         <script src="js/init.js"></script>
     </body>
