added initial particle instantiation

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -5,12 +5,14 @@
         <title>Lliwio</title>
 
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
-        <script src="js/particles.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     </head>
     <body>
 
         <textarea id="AppInputArea"></textarea>
-        <canvas id="AppCanvas"></canvas>
+        <div id="OutputContainer">
+            <div id="InitialParticles"></div>
+        </div>
 
         <script src="js/init.js"></script>
     </body>
